changed app name

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">AndroidAss</string>
+    <string name="app_name">Android Assignments</string>
     <string name="title">Android Assignments</string>
     <string name="first">Assignment - 12th Jan</string>
     <string name="second">Assignment - 18th Jan</string>
