added 25th jan assignment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,12 @@
 <resources>
     <string name="app_name">Android Assignments</string>
     <string name="title">Android Assignments</string>
-    <string name="j121">Assignment - 12th Jan</string>
-    <string name="j181">Assignment - 18th Jan</string>
-    <string name="j191">Assignment - 19th Jan</string>
-    <string name="j251">Assignment - 25th Jan</string>
+    <string name="j121">12th Jan</string>
+    <string name="j181">18th Jan</string>
+    <string name="j191">19th Jan</string>
+    <string name="j251">25th Jan - 1</string>
+    <string name="j252">25th Jan - 2</string>
+    <string name="j253">25th Jan - 3</string>
     <string name="f11">01st Feb - 1</string>
     <string name="f12">01st Feb - 2</string>
 </resources>
