added 8th feb assignment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="j253">25th Jan - 3</string>
     <string name="f11">01st Feb - 1</string>
     <string name="f12">01st Feb - 2</string>
+    <string name="f81">08th Feb - 1</string>
 </resources>
