added feb 16 assignment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="f11">01st Feb - 1</string>
     <string name="f12">01st Feb - 2</string>
     <string name="f81">08th Feb - 1</string>
+    <string name="f91">09th Feb - 1</string>
+    <string name="f161">16th Feb - 1</string>
 </resources>
