added 22nd feb assignment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="f8">08th Feb</string>
     <string name="f9">09th Feb</string>
     <string name="f16">16th Feb</string>
+    <string name="f22">22nd Feb</string>
+
 </resources>
