added 1st assignment of 1st march

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,6 @@
     <string name="f9">09th Feb</string>
     <string name="f16">16th Feb</string>
     <string name="f22">22nd Feb</string>
+    <string name="m1">01st Mar</string>
 
 </resources>
