added 8th march assignment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,6 @@
     <string name="f16">16th Feb</string>
     <string name="f22">22nd Feb</string>
     <string name="m1">01st Mar</string>
+    <string name="m8">08th Mar</string>
 
 </resources>
