added 23rd march assignment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,6 @@
     <string name="f22">22nd Feb</string>
     <string name="m1">01st Mar</string>
     <string name="m8">08th Mar</string>
+    <string name="m23">23rd Mar</string>
 
 </resources>
