--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,5 +22,6 @@
     <string name="m1">01st Mar</string>
     <string name="m8">08th Mar</string>
     <string name="m23">23rd Mar</string>
+    <string name="m29">29th Mar</string>
 
 </resources>
